# ml-lifecycle-platform

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  e2e.yml  pr-title.yml  release-please.yml
mlflow_server/: Dockerfile
project/: CHANGELOG.md  Dockerfile  pyproject.toml
project/src/: orchestrate.py  promote.py
project/src/policy/: release_policy.py
project/tests/: test_release_policy.py
serving/: Dockerfile  app.py  router.py  smoke_test.py
serving/tests/: test_api_contract.py  test_readiness.py  test_router.py
